<resources>
    <string name="app_name">Mobile Movie Explorer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_movies_title">Best movies</string>
    <string name="favorite_movies_title">Favorite movies</string>
    <string name="category_title">Category</string>
    <string name="all_network_back">back online</string>
    <string name="all_network_error">Check your internet connection, Please</string>
    <string name="movies_loading_error">Failed to load data movies.</string>
    <string name="details_loading_error">Failed to load data movie details.</string>
    <string name="summary">Summary</string>
    <string name="actors">Actors</string>
    <string name="runtime_format">%s min</string>
    <string name="profile_image_description">profile image description</string>
    <string name="share_button_description">share button description</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="movies_app">Movies App</string>
    <string name="movie_details">Movie details</string>
    <string name="favorite_empty">Favorite movies are Empty, please add select favorite movie.</string>
    <string name="you_can_browse_movies_and_shows_by_ngenre_search_for_specific_title_or_ncheck_out_our_recommendation_for_you">you can browse movies and shows by genre, search for specific title, or check out our recommendation for you</string>
    <string name="watch_now_or_watch_later">Watch Now or Watch Later</string>
    <string name="favorite_show">Favorite Show</string>
    <string name="discover_your">Discover Your</string>
    <string name="error_loading_data">Error Loading Data</string>
</resources>